...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Event Title -->
            <TextView
                android:id="@+id/detailsTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:paddingTop="40dp"
                android:paddingBottom="24dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- RSVP Status Text -->
        <TextView
            android:id="@+id/rsvpStatusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/status_not_rsvpd"
            android:textAlignment="center"
            android:textColor="@color/accent_light_orange"
            android:textSize="15sp"
            android:textStyle="italic" />

        <!-- RSVP Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/rsvpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/rsvp"
            android:textColor="@color/text_on_accent"
...
