...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/show_matching_interests_only"
                    android:textColor="@color/text_on_accent"
                    app:backgroundTint="@color/accent_orange"/>
                <ListView android:id="@+id/eventsListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_dark"
                    android:divider="@color/accent_light_orange"
                    android:dividerHeight="1dp"/>
            </LinearLayout>
...
